--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.card {
+  width: 18rem !important;
+}
+.task-card {
+  padding: 10px 5px 10px 5px !important;
+}
+.ant-btn-dashed {
+  background-color: #282c34 !important;
+}
